<resources>
    <string name="app_name">Skills_Android</string>
    <string name="main_index">Android 基础功能集合</string>
    <string name="custom_view_clock">自定义时钟</string>
    <string name="custom_view_tag">自定义 Tag 标签</string>
    <string name="custom_view_draw">自定义画板</string>
    <string name="path_rotate">旋转的飞机</string>
    <string name="path_search">搜索动画</string>
    <string name="path_region">异形区域点击</string>
    <string name="view_mesh">扭曲图片</string>
    <string name="custom_view_sine">正弦运动动画</string>
    <string name="show_app_info">展示所有应用</string>
    <string name="show_sys_app_info">展示系统应用</string>
    <string name="show_third_app_info">展示第三方应用信息</string>
    <string name="transition_animation">过渡动画</string>
    <string name="gesture_simple">简单手势检测器</string>
    <string name="double_click_clear">双击清除</string>
    <string name="str_osd">峰米 OSD 画面测试</string>
</resources>
