<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/custom_view"
        android:checkableBehavior="none">
        <item
            android:id="@+id/view_clock"
            android:title="@string/custom_view_clock" />
        <item
            android:id="@+id/view_tag"
            android:title="@string/custom_view_tag" />
        <item
            android:id="@+id/view_sine"
            android:title="@string/custom_view_sine" />
        <item
            android:id="@+id/view_draw"
            android:title="@string/custom_view_draw" />
        <item
            android:id="@+id/view_mesh"
            android:title="@string/view_mesh" />
    </group>
    <group
        android:id="@+id/android_animation"
        android:checkableBehavior="none">
        <item
            android:id="@+id/transition_animation"
            android:title="@string/transition_animation" />
    </group>
    <group
        android:id="@+id/custom_view_path"
        android:checkableBehavior="none">
        <item
            android:id="@+id/path_rotate"
            android:title="@string/path_rotate" />
        <item
            android:id="@+id/path_search"
            android:title="@string/path_search" />
        <item
            android:id="@+id/path_region"
            android:title="@string/path_region" />
    </group>
    <group
        android:id="@+id/fragment_system"
        android:checkableBehavior="none">
        <item
            android:id="@+id/show_app_info"
            android:title="@string/show_app_info" />
        <item
            android:id="@+id/show_sys_app_info"
            android:title="@string/show_sys_app_info" />
        <item
            android:id="@+id/show_third_app_info"
            android:title="@string/show_third_app_info" />
    </group>
</menu>